fix animation collapse

--- a/src/sass/Main.scss
+++ b/src/sass/Main.scss
@@ -30,8 +30,6 @@
             font-family: 'Montserrat', sans-serif;
             white-space: nowrap;
         }
-        
-        
     }
 
 
@@ -81,12 +79,11 @@
     }
 
     .collapse{
-        width: 100%x;
-        margin: auto;
+        width: 100%;
+        margin-top: 24px;
 
         .dropdown{
             width: 100%;
-           
             display: flex;
             justify-content: space-between;
             height: 52px;
@@ -134,14 +131,16 @@
             text-align: left;
             border-radius: 5px;
             display: inline-block;
-            margin-bottom: 30px;
+            overflow: hidden;
+            transition: max-height 0.6s ease;
+            
     
             p{
                 color: #FF6060;
                 line-height: 30px;
                 margin-left: 15px;
-                margin-top: -20px; 
-                transition: opacity .1s;          
+                margin-top: -100px;
+                transition: margin-top 0.6s;     
             }
         }
     }
@@ -289,6 +288,7 @@
 
     .desc{
         display: flex;
+        justify-content: space-between;
         margin-top: 24px;
     }
 }
